@@ -67,8 +67,8 @@ cl_symbols[] = {
 {"*BREAK-ON-SIGNALS*", CL_SPECIAL, NULL, -1, Cnil},
 {"*COMPILE-FILE-PATHNAME*", CL_SPECIAL, NULL, -1, Cnil},
 {"*COMPILE-FILE-TRUENAME*", CL_SPECIAL, NULL, -1, Cnil},
-{"*COMPILE-PRINT*", CL_SPECIAL, NULL, -1, Ct},
-{"*COMPILE-VERBOSE*", CL_SPECIAL, NULL, -1, Ct},
+{"*COMPILE-PRINT*", CL_SPECIAL, NULL, -1, Cnil},
+{"*COMPILE-VERBOSE*", CL_SPECIAL, NULL, -1, Cnil},
 {"*DEBUG-IO*", CL_SPECIAL, NULL, -1, OBJNULL},
 {"*DEBUGGER-HOOK*", CL_SPECIAL, NULL, -1, Cnil},
 {"*DEFAULT-PATHNAME-DEFAULTS*", CL_SPECIAL, NULL, -1, OBJNULL},
